# patient_encounter_management_system

./: README.md  pyproject.toml
src/: database.py
src/models/: models.py
tests/: test_main.py
