[tool.poetry]
name = "patient-encounter-system"
version = "0.1.0"
description = ""
authors = ["Varshini <m.varshinireddyvangeti@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10"
fastapi = ">=0.128.0,<0.129.0"
uvicorn = ">=0.40.0,<0.41.0"
sqlalchemy = ">=2.0.46,<3.0.0"
pymysql = ">=1.1.2,<2.0.0"
pydantic = { version = ">=2.12.5,<3.0.0", extras = ["email"] }
python-dotenv = ">=1.2.1,<2.0.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=9.0.2,<10.0.0"
ruff = ">=0.14.14,<0.15.0"
black = ">=26.1.0,<27.0.0"
bandit = ">=1.9.3,<2.0.0"
pytest-cov = ">=6.0.0"
httpx = ">=0.27.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
omit = ["src/reset_db.py"]

[tool.coverage.report]
exclude_lines = [
    "if __name__ == .__main__.:"
]